# cartograph

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  integration.yml  release.yml  reproduce.yml
docs/: guattari_for_engineers.md  index.md
docs/decisions/: ADR-0001-hybrid-s.md  README.md
docs/peer_reviews/: 0.1.0a0.md  README.md
docs/reference/: adapters.md  functors.md
docs/tutorials/: quickstart.md
examples/: 01_quickstart_gpt2.py  02_guattari_for_engineers.md
experiments/_wip/: README.md
paper/: README.md  figures.sha256  main.tex
scripts/: finalize_handoff.sh  make_paper_figures.py  verify_release.py
src/cartograph/: __init__.py  cli.py
src/cartograph/adapters/: __init__.py  hf_transformer.py  mamba.py
src/cartograph/bridge/: __init__.py  differentiable.py
src/cartograph/core/: __init__.py  adapter.py  registry.py  report.py
src/cartograph/functors/: __init__.py  f_flows.py  phi_phyla.py  t_territories.py  u_universes.py
src/cartograph/viz/: __init__.py  matplotlib_basic.py
tests/integration/: test_smoke.py
tests/reproducibility/: test_seed.py
tests/unit/: test_adapter.py  test_phi.py  test_registry.py  test_report.py  test_u.py
