[project]
name = "cartograph"
version = "0.1.0a0"
description = "Diagnostic OSS for evaluating foundation models on Guattari's four schizoanalytic functors (Flows, Machinic Phyla, Existential Territories, Universes of Reference)"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "hinanohart", email = "runzaisongpu95@gmail.com" }
]
maintainers = [
    { name = "hinanohart", email = "runzaisongpu95@gmail.com" }
]
requires-python = ">=3.11"
keywords = [
    "interpretability",
    "foundation-models",
    "schizoanalysis",
    "guattari",
    "sparse-autoencoders",
    "persistent-homology",
    "mechanistic-interpretability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "sae-lens>=3.0",
    "pymoo>=0.6",
    "numpy>=1.26",
    "matplotlib>=3.8",
    # CVE: scikit-learn <1.5.0 leaks sensitive data through unsupervised
    # transformers. Pulled in transitively by sae-lens / pymoo; pinning
    # the lower bound forces resolution onto a patched line.
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
# transformer-lens is required only by the Phase 1b mech-interp adapters
# (residual issue #1 in ADR-0001); keep it out of the core install so
# `pip install cartograph` stays lean.
interp = [
    "transformer-lens>=2.0",
]
# The `homology` extra (giotto-tda + ripser) is deferred to Phase 1b:
# giotto-tda 0.6 only ships wheels through cp310 and constrains
# scikit-learn < 1.5, which (a) blocks the cartograph install on Python
# 3.11/3.12 wheels and (b) drags in a known CVE (scikit-learn data leak).
# Re-add this extra in Phase 1b once a newer giotto-tda wheel is
# available, alongside the actual T-functor TDA implementation.
mamba = [
    "mamba-ssm>=2.3.2.post1",
]
# `all` deliberately omits mamba: mamba-ssm requires a CUDA toolchain at
# install time and cannot be resolved on most non-GPU machines. Users who
# want it must install `cartograph[mamba]` explicitly on a CUDA-capable host.
all = [
    "cartograph[interp]",
]

[project.scripts]
cartograph = "cartograph.cli:main"

[project.urls]
Homepage = "https://github.com/hinanohart/cartograph"
Documentation = "https://hinanohart.github.io/cartograph"
Repository = "https://github.com/hinanohart/cartograph"
Issues = "https://github.com/hinanohart/cartograph/issues"
Changelog = "https://github.com/hinanohart/cartograph/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "sae_lens.*",
    "transformer_lens.*",
    "transformers.*",
    "pymoo.*",
    "matplotlib.*",
    "ripser.*",
    "gtda.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "slow: integration tests that require model downloads",
    "reproducibility: byte-identical reproducibility tests",
]
